// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link not required 1`] = `
"/**
 * This file was automatically generated.
 * DO NOT MODIFY IT BY HAND.
 */


export interface AssetLink {
  /**
   * Link
   */
  type: string;
  /**
   * Asset
   */
  linkType: string;
  id: string;
}
/**
 * Brand
 */
export interface Brand {
  icon?: AssetLink;
}
"
`;

exports[`Symbol not required 1`] = `
"/**
 * This file was automatically generated.
 * DO NOT MODIFY IT BY HAND.
 */


/**
 * Brand
 */
export interface Brand {
  companyName?: string;
}
"
`;

exports[`Symbol required 1`] = `
"/**
 * This file was automatically generated.
 * DO NOT MODIFY IT BY HAND.
 */


/**
 * Brand
 */
export interface Brand {
  companyName: string;
}
"
`;

exports[`Text not required 1`] = `
"/**
 * This file was automatically generated.
 * DO NOT MODIFY IT BY HAND.
 */


/**
 * Brand
 */
export interface Brand {
  companyName?: string;
}
"
`;

exports[`Text required 1`] = `
"/**
 * This file was automatically generated.
 * DO NOT MODIFY IT BY HAND.
 */


/**
 * Brand
 */
export interface Brand {
  companyName: string;
}
"
`;

exports[`all fields 1`] = `
"/**
 * This file was automatically generated.
 * DO NOT MODIFY IT BY HAND.
 */


export interface Location {
  /**
   * Longitude
   */
  lon: number;
  /**
   * Latitude
   */
  lat: number;
}
export interface EntryLink {
  /**
   * Link
   */
  type: string;
  /**
   * Entry
   */
  linkType: string;
  id: string;
}
export interface AssetLink {
  /**
   * Link
   */
  type: string;
  /**
   * Asset
   */
  linkType: string;
  id: string;
}
/**
 * All the fields and widgets
 */
export interface AllTheFieldsAndWidgets {
  singleLine?: string;
  multipleLine?: string;
  markdown?: string;
  radio?: string;
  dropdown?: string;
  symbol?: string;
  slug?: string;
  url?: string;
  youtube?: string;
  ooyala?: string;
  kaltura?: string;
  number?: number;
  rating?: number;
  decimal?: number;
  bool?: boolean;
  date?: string;
  location?: Location;
  entry?: EntryLink;
  asset?: AssetLink;
  object?: {
    [k: string]: any;
  };
  entryCards?: EntryLink[];
  entries?: EntryLink[];
  assetGallery?: AssetLink[];
  assets?: AssetLink[];
  symbols?: string[];
}
"
`;
